Remove plugin arg
08.16.2023

- change: update date
- change: remove argument "--illegal-acess=permit" in
    maven-failsafe-plugin and maven-surefire-plugin that
	may have affected updating to junit-jupitor 5.10.0