@@ -227,9 +227,6 @@
 				    <artifactId>maven-surefire-plugin</artifactId>
 				    <version>3.1.2</version>
 				    <configuration>
-				        <argLine>
-				            --illegal-access=permit
-				        </argLine>
 				    </configuration>
 				</plugin>
 				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
@@ -238,9 +235,6 @@
 				    <artifactId>maven-failsafe-plugin</artifactId>
 				    <version>3.1.2</version>
 				    <configuration>
-				        <argLine>
-				            --illegal-access=permit
-				        </argLine>
 				    </configuration>
 				</plugin>
 				<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
